# vcu_reu

./: .gitignore  AgeGBM_R.ipynb  FactorAnalysis.ipynb  MultivariateAnalysis.ipynb  README.md  SMC_R.ipynb  SubGroupCreationWalkthrough.ipynb  Text_to_number_methods.ipynb  VeracityFormulaTests.ipynb  XGBOOST_FRAMEWORK_ETHAN.ipynb  pyproject.toml
vcu_reu_R/: EthanCausal_Inference_R.ipynb  LexiconSA.R  MLSA.R
vcu_reu_py/: Visualizations (1).ipynb  data_explore.py  datacleansing.py  nlp.py
