[tool.poetry]
name = "vcu-reu"
version = "0.1.0"
description = ""
authors = ["shearere2 <shearere2@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
nltk = "^3.8.1"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
